Added placeholders for event card

--- a/web/src/app/components/event-card/event-card.component.css
+++ b/web/src/app/components/event-card/event-card.component.css
@@ -58,3 +58,9 @@
 .description {
   grid-area: 11 / 2 / 12 / 8;
 }
+
+.longDash {
+  transform: scaleX(1.7);
+  display: inline-block;
+  transform-origin: left top;
+}
