--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -42,16 +42,15 @@
 .edit-cover-preview {
   width: 72px;
   height: 72px;
+  margin-right: 16px;
 }
 
 .edit-cover-upload-progress {
   flex: 1;
-  margin-left: 16px;
 }
 
 .edit-cover-change {
   cursor: pointer;
-  margin-left: 16px;
 }
 
 .edit-cover-remove {
@@ -137,10 +136,6 @@
 
 .date-container {
   margin-bottom: 50px;
-}
-
-.removeButton {
-  width: 400px;
 }
 
 .removeButtonContainer {
