Added api to pair users

--- a/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
+++ b/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
@@ -1,19 +1,34 @@
 <div>
   <div class="attendees-grid">
     <div class="header">{{ title }}</div>
-    <ng-container *ngFor="let attendee of attendees; let i = index;">
-      <div class="column number">{{ i + 1 }}</div>
+    <ng-container *ngFor="let attendee of attendees; let i = index">
+      <div class="column number">{{ isPaired(i) }}</div>
       <div class="column name">
-        <a [routerLink]="['/users', attendee.user.id]">{{ attendee.user.firstName + " " + attendee.user.lastName }} </a>
+        <a [routerLink]="['/users', attendee.user.id]"
+          >{{ attendee.user.firstName + ' ' + attendee.user.lastName }}
+        </a>
       </div>
-      <div class="column rating">
-        {{ attendee.user.rating }}
-      </div>
+      <div class="column rating">{{ attendee.user.rating }}</div>
       <div class="column options">
-        <app-icon-button class="button" *ngIf="showAdd(attendee)" (click)="handleAdd(attendee)" image="/assets/baseline-add_circle_outline-24px.svg"></app-icon-button>
-        <app-icon-button class="button" *ngIf="showRemove(attendee)" (click)="handleRemove(attendee)" image="/assets/baseline-remove_circle_outline-24px.svg"></app-icon-button>
-        <app-icon-button class="button" *ngIf="showLeave(attendee)" (click)="handleRemove(attendee)" image="/assets/baseline-directions_run-24px.svg"
-          name="Leave">
+        <app-icon-button
+          class="button"
+          *ngIf="showAdd(attendee)"
+          (click)="handleAdd(attendee)"
+          image="/assets/baseline-add_circle_outline-24px.svg"
+        ></app-icon-button>
+        <app-icon-button
+          class="button"
+          *ngIf="showRemove(attendee)"
+          (click)="handleRemove(attendee)"
+          image="/assets/baseline-remove_circle_outline-24px.svg"
+        ></app-icon-button>
+        <app-icon-button
+          class="button"
+          *ngIf="showLeave(attendee)"
+          (click)="handleRemove(attendee)"
+          image="/assets/baseline-directions_run-24px.svg"
+          name="Leave"
+        >
         </app-icon-button>
       </div>
     </ng-container>
