--- a/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
+++ b/web/src/app/routes/user-page/components/user-events-table/user-events-table.component.html
@@ -7,6 +7,6 @@
     <div>
       <a [routerLink]="['/events', event.id]">{{ event.name }}</a>
     </div>
-    <div>{{ eventDate(i) }}</div>
+    <div>{{ i }}</div>
   </ng-container>
 </div>
