--- a/web/src/app/components/event-card/event-card.component.html
+++ b/web/src/app/components/event-card/event-card.component.html
@@ -1,25 +1,35 @@
-<div class="card" (click)="showEvent($event)">
-  <div class="name">{{ name }}</div>
-  <div class="location-header">Место</div>
-  <div *ngIf="locationSet; else unknownLocation" class="location">
-    {{ location }}
+<div class="card text-white bg-secondary mb-3 event-card" style="width: 40rem;">
+  
+  <div class="row">
+      <div class="col-sm-6">
+        <div class="card-body">
+            <h3 class="card-title">{{ name }}</h3>
+            <div>Место</div>
+            <div *ngIf="locationSet; else unknownLocation" class="location">
+              {{ location }}
+            </div>
+            <ng-template #unknownLocation>
+              <div><span class="longDash">&mdash;</span></div>
+            </ng-template>
+            <div>Дата</div>
+            <div *ngIf="dateValid; else unknownDate" class="date">{{ date }}</div>
+            <ng-template #unknownDate>
+              <div><span class="longDash">&mdash;</span></div>
+            </ng-template>
+            <div>Участники</div>
+            <div>{{ participants }}</div>
+            <div>Описание</div>
+            <div *ngIf="descriptionExist; else unknownDescription" class="description">
+              {{ description }}
+            </div>
+            <ng-template #unknownDescription>
+              <div><span class="longDash">&mdash;</span></div>
+            </ng-template>
+            <a href="#" class="btn btn-lg btn-primary mt-5" (click)="showEvent($event)">Открыть</a> 
+        </div>
+      </div>
+      <div class="col-sm-6 text-right">
+        <div class="card-img-top image" [ngStyle]="image"></div>
+      </div>
   </div>
-  <ng-template #unknownLocation>
-    <div class="location"><span class="longDash">&mdash;</span></div>
-  </ng-template>
-  <div class="date-header">Дата</div>
-  <div *ngIf="dateValid; else unknownDate" class="date">{{ date }}</div>
-  <ng-template #unknownDate>
-    <div class="date"><span class="longDash">&mdash;</span></div>
-  </ng-template>
-  <div class="participants-header">Участники</div>
-  <div class="participants">{{ participants }}</div>
-  <div class="description-header">Описание</div>
-  <div *ngIf="descriptionExist; else unknownDescription" class="description">
-    {{ description }}
-  </div>
-  <ng-template #unknownDescription>
-    <div class="description"><span class="longDash">&mdash;</span></div>
-  </ng-template>
-  <div class="image" [ngStyle]="image"></div>
 </div>
