--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -1,4 +1,134 @@
-<div class="container">
+<div class="modal fade show" id="loginEventModal" tabindex="-1" role="document">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              id="sign-in-tab"
+              data-toggle="tab"
+              aria-controls="sign-in"
+              aria-selected="true"
+              href="#sign-in"
+            >
+              <h5>Войти</h5>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              id="sign-up-tab"
+              data-toggle="tab"
+              href="#sign-up"
+              role="tab"
+              aria-controls="sign-up"
+              aria-selected="false"
+            >
+              <h5>Зарегистрироваться</h5>
+            </a>
+          </li>
+        </ul>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="tab-content">
+        <div
+          class="tab-pane fade show active"
+          id="sign-in"
+          role="tabpanel"
+          aria-labelledby="sign-in-tab"
+        >
+          <form
+            class="form"
+            [formGroup]="signInForm"
+            (ngSubmit)="signIn($event)"
+          >
+            <div class="modal-body">
+              <div class="form-group">
+                <input
+                  id="email"
+                  class="form-control my-3"
+                  formControlName="email"
+                  placeholder="Электронная почта"
+                />
+                <input
+                  id="password"
+                  class="form-control my-3"
+                  formControlName="password"
+                  placeholder="Пароль"
+                  type="password"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-info">
+                <span class="btn-label mr-2"><i class="fa fa-vk"></i></span
+                >Войти через VK
+              </button>
+              <button type="submit" class="btn btn-primary">Войти</button>
+            </div>
+          </form>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="sign-up"
+          role="tabpanel"
+          aria-labelledby="sign-up-tab"
+        >
+          <form
+            class="form"
+            [formGroup]="registerForm"
+            (ngSubmit)="signUp($event)"
+          >
+            <div class="modal-body">
+              <div class="form-group">
+                <input
+                  id="first-name"
+                  class="form-control my-3"
+                  formControlName="firstName"
+                  placeholder="Имя"
+                />
+                <input
+                  id="second-name"
+                  class="form-control my-3"
+                  formControlName="lastName"
+                  placeholder="Фамилия"
+                />
+                <input
+                  id="email"
+                  class="form-control my-3"
+                  formControlName="email"
+                  placeholder="Электронная почта"
+                />
+                <input
+                  id="password"
+                  class="form-control my-3"
+                  formControlName="password"
+                  placeholder="Пароль"
+                  type="password"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">
+                Зарегистрироваться
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container">
   <input type="checkbox" id="form-switch" />
   <div class="sign-in">
     <div class="header">Log in</div>
@@ -61,4 +191,4 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
