--- a/web/src/app/components/sidebar/sidebar.component.html
+++ b/web/src/app/components/sidebar/sidebar.component.html
@@ -1,25 +1,26 @@
-<div class="container">
-  <nav class="sidebar">
-    <ul>
-      <li>
-        <div class="option logo">Logo</div>
-      </li>
-      <li>
-        <div class="option events" routerLink="/events">Events</div>
-      </li>
-      <li>
-        <div class="option users" routerLink="/users">Users</div>
-      </li>
-      <li>
-        <div class="option acout">About</div>
-      </li>
-    </ul>
-  </nav>
-  <div class="option sign-in" *ngIf="authorized" [routerLink]="['/users' , userId]">
-    Profile
-  </div>
-  <div class="option sign-in" *ngIf="!authorized" (click)="handleLogin($event)">
-    Login
-  </div>
+<header class="navbar sticky-top navbar-expand-lg navbar-light bg-light" id="navbarColor03"
+style="margin-bottom: 20px">
+  <ul class="navbar-nav collapse navbar-collapse">
+    <li [ngClass]="{'active': this.isEventsPage}" class="nav-item">
+      <a class="nav-link" href="#" routerLink="/events">Соревнования</a>
+    </li>
+    <li [ngClass]="{'nav-item': true, 'active': isProfilePage}">
+      <a class="nav-link" href="#" *ngIf="authorized" [routerLink]="['/users' , userId]">Профиль</a>
+    </li>
+  </ul>
+  <app-add-event-button></app-add-event-button>
+  <!-- <app-edit-user-button></app-edit-user-button> -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" data-toggle="modal" data-target="#loginEventModal" *ngIf="!authorized" (click)="showLoginPopup($event)" href="#">Войти</a>
+        <a class="nav-link" *ngIf="authorized" (click)="handleLogout($event)" href="#">Выйти</a>
+    </li>
+  </ul>
+</header>
 
-</div>
+<app-login-form
+  *ngIf="showLogin"
+  (close)="closeLoginPopup($event)"
+></app-login-form>
+
+
