--- a/web/src/app/routes/events-page/components/events-table/events-table.component.html
+++ b/web/src/app/routes/events-page/components/events-table/events-table.component.html
@@ -1,9 +1,5 @@
-<div class="event-grid">
+<div>
   <ng-container *ngFor="let event of events">
-    <app-event-card class="card" [event]="event"></app-event-card>
-    <!-- <app-dropdown-menu>
-      <span>Edit</span>
-      <span (click)="removeEvent(event)">Delete</span>
-    </app-dropdown-menu> -->
+    <app-event-card [event]="event"></app-event-card>
   </ng-container>
 </div>
