--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -3,7 +3,7 @@
     title="Соревнования"
     (showAddEventClick)="showAddPopup()"
     (loginClick)="showLoginPopup()"
-    current="profile"
+    [actions]="sidebarActions"
   ></app-sidebar>
 
   <div class="top-panel">
