--- a/web/src/app/routes/user-page/user-page.component.css
+++ b/web/src/app/routes/user-page/user-page.component.css
@@ -77,16 +77,6 @@
   color: #555;
 }
 
-.ttwInput {
-  flex: 1;
-  padding: 0px;
-}
-
-.ttwInput ::ng-deep input {
-  border: none;
-  padding-left: 0px;
-}
-
 .ttwLabel > span {
   align-self: center;
   color: #808080;
@@ -101,4 +91,21 @@
 .changeTtwLink,
 .addTtwLink {
   margin-left: 20px;
+}
+
+
+.connect-button {
+  background-color: #6610f2;
+}
+
+#ttw-input:focus {
+  outline: none;
+}
+
+#ttw-input {
+  border: none;
+}
+
+.pointer {
+  cursor: pointer;
 }
