--- a/web/src/app/routes/user-page/user-page.component.html
+++ b/web/src/app/routes/user-page/user-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="user">
-    <app-sidebar
+  <app-sidebar
     title="Соревнования"
     (showAddEventClick)="showAddPopup()"
     (loginClick)="showLoginPopup()"
@@ -8,20 +8,6 @@
 
   <div class="top-panel">
     <app-header class="header">{{ user.name }}</app-header>
-    <div class="buttons">
-      <app-button
-        class="button"
-        *ngIf="currentUser"
-        (press)="showEditPopup($event)"
-        value="Edit"
-      ></app-button>
-      <app-button
-        class="button"
-        *ngIf="currentUser"
-        (press)="handleLogout($event)"
-        value="Logout"
-      ></app-button>
-    </div>
   </div>
 
   <app-popup
@@ -54,6 +40,41 @@
     </form>
   </app-popup>
 
+  <div class="modal fade show" id="editTtwModal" tabindex="-1" role="document">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5>Редактировать Ттв</h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form class="form" [formGroup]="editTtwForm" (ngSubmit)="saveTtw($event)">
+          <div class="modal-body">
+            <div class="form-group">
+              <label class="ttwLabel">
+                <span>http://r.ttw.ru/players/?id=</span>
+                <input
+                  id="ttw-input"
+                  formControlName="ttwUrl"
+                  value="{{user.ttwId}}"
+                />
+              </label>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Сохранить</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <app-popup
     *ngIf="showEditTtw"
     title="Редактировать ттв"
@@ -79,31 +100,33 @@
   <div class="user-content">
     <div class="info" *ngIf="!user.ttwId">
       <div>Профиль Ттв не прилинкован</div>
-      <app-button
-        class="addTtwLink"
-        appearance="connect"
+      <button
+        class="btn btn-primary ml-5"
+        data-toggle="modal"
         *ngIf="currentUser"
-        (press)="showEditTtwPopup($event)"
-        value="Связать"
-      ></app-button>
+        data-target="#editTtwModal"
+      >
+        Связать
+      </button>
     </div>
     <div class="info ttw" *ngIf="user.ttwId">
       <div>Профиль на ттв</div>
       <div class="ttwUrl">
         <a href="{{ ttwLink }}">{{ ttwLink }}</a>
+        <fa-icon class="ml-3 pointer" 
+        data-toggle="modal"
+        *ngIf="currentUser"
+        data-target="#editTtwModal" [icon]="faPencilAlt"></fa-icon>
       </div>
     </div>
 
     <div class="info" *ngIf="user.ttwId">
       <div>Рейтинг:</div>
       <span class="rating">{{ user.rating }}</span>
-      <app-button
-        class="changeTtwLink"
-        appearance="connect"
+      <fa-icon class="ml-3 pointer" 
+        data-toggle="modal"
         *ngIf="currentUser"
-        (press)="showEditTtwPopup($event)"
-        value="Обновить рейтинг"
-      ></app-button>
+        data-target="#editTtwModal" [icon]="faSyncAlt"></fa-icon>
     </div>
     <div class="info" *ngIf="user.email">
       <span>Email:</span> <span class="email">{{ user.email }}</span>
