--- a/web/src/app/components/edit-event-button/edit-event-button.component.html
+++ b/web/src/app/components/edit-event-button/edit-event-button.component.html
@@ -126,9 +126,51 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Сохранить</button>
+          <button
+            class="btn btn-danger"
+            data-toggle="modal"
+            data-target="#removeEventModal"
+          >
+            <fa-icon class="mr-2" [icon]="faTrashAlt"></fa-icon>
+            Удалить
+          </button>
+          <button type="submit" class="btn btn-primary">
+            Сохранить
+          </button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade show"
+  id="removeEventModal"
+  tabindex="-1"
+  role="document"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Удалить соревнование</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <span>Действие нельзя будет отменить</span>
+      </div>
+      <div class="modal-footer d-inline-flex align-items-center">
+        <button class="btn btn-primary" data-dismiss="modal">Отмена</button>
+        <button (click)="removeEvent($event)" class="btn btn-danger">
+          Удалить
+        </button>
+      </div>
     </div>
   </div>
 </div>
