--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -1,7 +1,3 @@
-:host {
-  width: 100%;
-  min-width: 750px;
-}
 .attendees {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -20,75 +16,7 @@
   grid-area: 1 / 1 / 2 / 3;
 }
 
-.buttons {
-  grid-area: 1 / 2 / 2 / 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button {
-  margin: 0 10px;
-}
-
-.edit-cover-layout {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.edit-cover-preview {
-  width: 72px;
-  height: 72px;
-  margin-right: 16px;
-}
-
-.edit-cover-upload-progress {
-  flex: 1;
-}
-
-.edit-cover-change {
-  cursor: pointer;
-}
-
-.edit-cover-remove {
-  margin-left: 16px;
-}
-
-.edit-cover-change app-button {
-  pointer-events: none;
-}
-
-.edit-cover-change input {
-  opacity: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-.edit-date-layout {
-  color: #444444;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  padding: 8px 20px;
-}
-
-.edit-date-layout .filler {
-  flex: 1;
-}
-
-.event-content {
-  display: flex;
-  flex-direction: row;
-  margin-left: 100px;
-  margin-top: 100px;
-  margin-right: 100px;
-  flex-shrink: 0;
-}
-
-.right > img {
+.event-image {
   display: block;
   width: 100%;
   height: auto;
@@ -111,20 +39,6 @@
   margin-left: 20px;
 }
 
-.left {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  margin-right: 10px;
-}
-
-.right {
-  flex: 1;
-  margin-left: 10px;
-  flex-basis: 300px;
-  flex-shrink: 0;
-}
-
 .text {
   font-size: 20px;
   line-height: 30px;
@@ -138,63 +52,13 @@
   margin-bottom: 50px;
 }
 
-.removeButtonContainer {
-  display: flex;
-  justify-content: center;
-  margin: 40px;
+.m-10 {
+  margin-left: 100px;
+  margin-top: 100px;
+  margin-right: 100px;
 }
 
-.removePopupContent {
-  margin: 20px;
-}
 
-.buttons {
-  justify-content: space-between;
-}
-
-.removeEventButton {
+.flex {
   flex: 1;
-  margin-right: 20px;
-}
-
-.cancelRemoveButton {
-  flex: 1;
-  margin-left: 20px;
-}
-
-.removeEventDescription {
-  color: #000;
-  margin-bottom: 20px;
-}
-
-.toggleMore {
-  text-align: center;
-  width: 100%;
-  color: #888;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  cursor: pointer;
-}
-
-.toggleMore::before {
-  content: '▸';
-  display: inline-block;
-  margin-right: 4px;
-  transition: transform 0.3s;
-}
-
-.toggleMore.expanded::before {
-  transform: rotate(90deg);
-}
-
-.toggleMore > span {
-  text-decoration: underline;
-}
-
-.remove-event {
-  padding: 10px 20px;
-}
-
-.remove-popup {
-  z-index: 3;
 }
