--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -53,12 +53,14 @@
 }
 
 .m-10 {
-  margin-left: 100px;
-  margin-top: 100px;
-  margin-right: 100px;
+  margin: 100px;
 }
 
 
 .flex {
   flex: 1;
+}
+
+.attendees-table {
+  margin-top: 100px;
 }
