--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -13,21 +13,58 @@
         <img class="event-image mw-300" [src]="image" />
       </div>
       <div class="flex ml-5">
-        <div class="description text">{{ event.description }}</div>
-        <div *ngIf="dateValid" class="date-container text">
-          <div class="date-header">Дата</div>
-          <div class="date">{{ date }}</div>
-        </div>
+        <div class="row">
+          <div class="column">
+            <div>
+              <span class="bold text">Описание</span>
+            </div>
+            <div class="mt-3">
+              <div *ngIf="dateValid" class="text">
+                <span class="bold text">Дата начала</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <div *ngIf="dateValid" class="text">
+                <span class="bold text">Дата завершения</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <div>
+                <span class="bold text">Тип соревнования</span>
+              </div>
+            </div>
+          </div>
 
-        <app-button
-          class="registerButton"
-          appearance="positive"
-          *ngIf="canRegister"
-          (press)="register()"
-          value="Записаться"
-        >
-        </app-button>
-        <app-attendees-table
+          <div class="column ml-5">
+            <div>
+              <span class="text">{{ event.description }}</span>
+            </div>
+            <div class="mt-3">
+              <span class="text">{{ startDate }}</span>
+            </div>
+            <div class="mt-3">
+              <span class="text">{{ endDate }}</span>
+            </div>
+            <div class="mt-3">
+              <span class="text">{{ eventType }}</span>
+            </div>
+          </div>
+
+          <!-- <app-button
+            class="registerButton"
+            appearance="positive"
+            *ngIf="canRegister"
+            (press)="register()"
+            value="Записаться"
+          >
+          </app-button> -->
+        </div>
+        <div class="row mt-5">
+          <button class="btn btn-lg register" (click)="register()" *ngIf="canRegister">
+            <span class="text">Записаться на соревнование</span>
+          </button>
+        </div>
+        <!-- <app-attendees-table
           *ngIf="participants.length > 0"
           [eventOwner]="eventOwner"
           (remove)="removeUser($event)"
@@ -35,11 +72,14 @@
           [attendees]="participants"
           [eventId]="eventId"
         >
-        </app-attendees-table>
+        </app-attendees-table> -->
       </div>
     </div>
     <div class="attendees-table">
-      <app-attendee-table [attendees]="event.attendees" [event]="event"></app-attendee-table>
+      <app-attendee-table
+        [attendees]="event.attendees"
+        [event]="event"
+      ></app-attendee-table>
     </div>
   </div>
 </div>
