--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -10,7 +10,7 @@
   <div class="m-5">
     <div class="d-flex flex-row">
       <div class="flex">
-        <img class="event-image mw-300" [src]="image" />
+        <img class="event-image mw-300 img-thumbnail" [src]="image" />
       </div>
       <div class="flex ml-5">
         <div class="row">
@@ -19,12 +19,12 @@
               <span class="bold text">Описание</span>
             </div>
             <div class="mt-3">
-              <div *ngIf="dateValid" class="text">
+              <div class="text">
                 <span class="bold text">Дата начала</span>
               </div>
             </div>
             <div class="mt-3">
-              <div *ngIf="dateValid" class="text">
+              <div class="text">
                 <span class="bold text">Дата завершения</span>
               </div>
             </div>
@@ -37,7 +37,7 @@
 
           <div class="column ml-5">
             <div>
-              <span class="text">{{ event.description }}</span>
+              <span class="text">{{ eventDescription }}</span>
             </div>
             <div class="mt-3">
               <span class="text">{{ startDate }}</span>
