--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -68,9 +68,9 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button class="btn btn-info">
-                <span class="btn-label mr-2"><i class="fa fa-vk"></i></span
-                >Войти через VK
+              <button class="btn btn-info" (click)="handleVkLogin()">
+                <span class="btn-label mr-2"><i class="fa fa-vk"></i></span>
+                Войти через VK
               </button>
               <button type="submit" class="btn btn-primary">Войти</button>
             </div>
