--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -81,7 +81,7 @@
         </app-attendees-table> -->
       </div>
     </div>
-    <div class="attendees-table">
+    <div *ngIf="event.attendees.length > 0" class="attendees-table">
       <app-attendee-table
         [attendees]="event.attendees"
         [event]="event"
